[package]
name = "huh_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serenity = "^0.10"
#tokio = "*"

[dependencies.serenity]
version = "^0.10"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "utils"]

[dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread"]
